# Prog2-Abd-2A

./: .gitignore  README.md
blatt1/: CMakeLists.txt  aufgabe4.txt  aufgabe5.txt  aufgabe6.txt  main.cpp
blatt2/: CMakeLists.txt  euroCheck.cpp  euroCheck.h  main.cpp  test.h
blatt3/: CMakeLists.txt
blatt3/src/: CMakeLists.txt
blatt3/src/app/: CMakeLists.txt  game.cpp  init.cpp  test.cpp
blatt3/src/libGameObjects/: CMakeLists.txt  Missile.cpp  Missile.h  PlayerSea.cpp  PlayerSea.h  Ship.cpp  Ship.h
blatt3/src/libSea/: CMakeLists.txt  Object.cpp  Object.h
blatt4/: CMakeLists.txt
blatt4/src/app/: CMakeLists.txt  game.cpp  game.h  utils.cpp
blatt4/src/libGameObjects/: CMakeLists.txt  InvertingMissile.cpp  InvertingMissile.h  Missile.cpp  Missile.h  PlayerSea.cpp  PlayerSea.h  Ship.cpp  Ship.h  TumblingMissile.cpp  TumblingMissile.h
blatt4/src/libSea/: CMakeLists.txt  Coordinates.cpp  Coordinates.h  Object.h
blatt5/: CMakeLists.txt
blatt5/blatt5/: CMakeLists.txt
blatt5/blatt5/src/app/: CMakeLists.txt  game.h  game.inl  init.cpp  test.h
blatt5/src/app/: game.cpp  game.h  game.inl  init.cpp  test.cpp  utils.h
blatt5/src/libGameObjects/: CMakeLists.txt  Missile.cpp  Missile.h  Output.h  PlayerSea.cpp  PlayerSea.h  PlayerSea_output.cpp
blatt5/src/libSea/: CMakeLists.txt  Grid2D.h  Grid2D.inl  Object.cpp
blatt6/: CMakeLists.txt
blatt6/src/app/: init.cpp
blatt6/src/libGameObjects/: CMakeLists.txt  Missile.cpp  Missile.h  PlayerSea.cpp  PlayerSea.h  PlayerSea_stats.cpp  Ship.cpp
blatt6/src/libSea/: Grid2D.h  Grid2D.inl  Object.h
blatt7/: CMakeLists.txt
blatt7/src/app/: game.cpp  game.h  init.cpp  main.cpp  test.cpp
blatt7/src/libGameObjects/: Missile.cpp  Missile.h  PlayerSea.cpp  PlayerSea.h  Ship.cpp  Ship.h
blatt7/src/libSea/: Coordinates.cpp  Coordinates.h  Grid2D.inl  Object.h
blatt8/: CMakeLists.txt
blatt8/src/app/: CMakeLists.txt  game.cpp  game.h  init.cpp  init.h  main.cpp  test.cpp  test.h  utils.h
blatt8/src/libGameObjects/: Attack.h  CMakeLists.txt  Constants.h  DoubleMissile.cpp  DoubleMissile.h  Missile.cpp  Missile.h  Output.cpp  Output.h  PlayerSea.cpp  PlayerSea.h  PlayerSea_output.cpp  PlayerSea_stats.cpp  Ship.cpp  Ship.h  TumblingMissile.cpp  TumblingMissile.h  Vortex.cpp  Vortex.h
blatt8/src/libSea/: CMakeLists.txt  Coordinates.h  Coordinates.inl  Grid2D.h  Grid2D.inl  Object.h
(+4 files in other folders)
